<resources>
    <string name="app_name">Chat.onion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="shareid">Invite friends</string>
    <string name="changealias">Change Alias</string>
    <string name="showqr">Show QR</string>
    <string name="scanqr">Scan QR</string>
    <string name="copy_id">Copy ID</string>
    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="send">Send</string>
    <string name="id">ID</string>
    <string name="alias">Alias</string>
    <string name="open_chat">Open Chat</string>
    <string name="change_alias">Change Alias</string>
    <string name="delete">Delete</string>
    <string name="add_contact">Add Contact</string>
    <string name="show_qr">Show QR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="enter_id">Enter ID</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_requests">Requests</string>
    <string name="id_copied_to_clipboard">"ID copied to clipboard: "</string>
    <string name="delete_contact_q">Delete Contact?</string>
    <string name="really_delete_contact">Do your really want to delete %s from you contact list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_change_alias">Change Alias</string>
    <string name="apply">Apply</string>
    <string name="snack_alias_changed">Alias changed</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>

    <!--<string name="invitation_text">%1$s\n\nHey, I\'d like to communicate with you securely via Chat.onion\n\nID: %2$s\n\n</string>-->

    <!--
    <string name="invitation_text">%1$s\n\nLet\'s chat securely via Chat.onion!\n\nContact link\nchat.onion/%2$s/%3$s\n(click after installation to connect)\n\nID: %2$s\n(enter manually if the contact link doesn\'t work)\n</string>
    -->

    <!--
    <string name="invitation_text">Hey, let\'s chat securely via Chat.onion!\n\n%1$s\n\nContact link\nchat.onion/%2$s/%3$s\n(click after installation to connect)\n\nID: %2$s\n(enter manually if the contact link doesn\'t work)\n</string>
    -->

    <string name="invitation_text">Hey, let\'s chat securely via Chat.onion!\n\n%1$s\n\nContact link\nchat.onion/%2$s/%3$s\n(click after installation to connect)\n\nID: %2$s\n(enter manually if the contact link doesn\'t work)\n</string>


    <string name="libraries">Libraries</string>
    <string name="ok">OK</string>
    <string name="qr_invalid">QR Code Invalid</string>
    <string name="contact_already_added">Contact already added.</string>
    <string name="title_add_contact">Add Contact</string>
    <string name="invalid_id">Invalid ID</string>
    <string name="cant_add_self">Can\'t add self</string>
    <string name="failed_to_add_contact">Failed to add contact.</string>
    <string name="contact_added">Contact added.</string>
    <string name="no_contact_requests">No Contact Requests</string>
    <string name="message_pending">Pending...</string>
    <string name="message_sent">Sent</string>
    <string name="dlg_title_connect">Connect</string>
    <string name="icr_accept">Accept</string>
    <string name="icr_decline">Decline</string>
    <string name="undo">Undo</string>
    <string name="contact_request_declined">Declined.</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="sounds">Sounds</string>
    <string name="notifications_summary">Show a notification when a new message is received while the app is in the background.</string>
    <string name="sounds_summary">Play a sound when a new message is received.</string>
    <string name="prefs_reset_all">Reset All</string>
    <string name="no_contacts">No Contacts</string>
    <!--<string name="dlg_title_reset">Reset</string>-->
    <!--<string name="dlg_msg_reset">Reset all settings to their default values?</string>-->

    <plurals name="notification_new_messages">
        <item quantity="one">%d new message</item>
        <item quantity="other">%d new messages</item>
    </plurals>

</resources>
